crates/analyzer/tests/snapshots/errors__array_size_mismatch.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: type mismatch
  ┌─ [snippet]:3:25
  │
3 │   let x: Array<u8, 3> = []
  │                         ^^ this has type `Array<u8, 0>`; expected type `Array<u8, 3>`

error: type mismatch
  ┌─ [snippet]:4:25
  │
4 │   let y: Array<u8, 3> = [1, 2]
  │                         ^^^^^^ this has type `Array<u8, 2>`; expected type `Array<u8, 3>`


